[workspace]
resolver = "2"
members = ["gas_station", "lib", "mock/*", "nft_key"]

[workspace.dependencies]
serde = { version = "*", features = ["derive"] }
borsh = "1.5.0"
ethers-core = "2.0.13"
near-sdk = "5.1"
near-sdk-contract-tools = { version = "3.0.2" }
schemars = "0.8.16"
thiserror = "1"

[workspace.lints.clippy]
pedantic = "warn"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = true
