[workspace]
resolver = "2"
members = ["cli/*", "gas_station", "lib", "mock/*", "nft_key"]

[workspace.dependencies]
ethers-core = "2.0.13"
near-sdk = "5.1"
near-sdk-contract-tools = { version = "3.0.2" }
schemars = "0.8.16"
thiserror = "1"

# dev-dependencies only
near-workspaces = { version = "0.11", features = ["unstable"] }
tokio = "1.28"

[workspace.lints.clippy]
pedantic = "warn"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
strip = true
