[package]
authors = ["Jacob Lindahl <jacob.lindahl@near.org>"]
name = "gas-station"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers-core.workspace = true
lib = { path = "../lib" }
near-sdk.workspace = true
near-sdk-contract-tools.workspace = true
schemars.workspace = true
thiserror.workspace = true

[dev-dependencies]
near-workspaces.workspace = true
tokio.workspace = true

[features]
default = ["debug"]

# enables functions only for testing purposes
# NOT SAFE FOR PRODUCTION USE
debug = []

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
