[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers-core.workspace = true
getrandom = { version = "0.2", features = [
    "custom",
] } # make this package happy for wasm target
hex.workspace = true
near-sdk.workspace = true
schemars.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
sha2 = "0.10.8"

[features]
default = []

# NOT FOR PRODUCTION
debug = []
