[package]
name = "nft-key"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ethers-core.workspace = true
lib = { path = "../lib" }
near-sdk.workspace = true
near-sdk-contract-tools.workspace = true

[dev-dependencies]
near-workspaces.workspace = true
tokio.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["debug"]

debug = []

[lints]
workspace = true
