[package]
name = "near-pyth-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lib = { path = "../../lib" }
bs58 = "0.5.1"
clap = { version = "4.5.8", features = ["derive"] }
const-hex = "1.12.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4.38"
chrono-humanize = "0.2.3"
near-jsonrpc-client = "0.11"
near-primitives = "0.23.0"
near-token = "0.2.0"
near-fetch = "0.5.0"
near-crypto = "0.23.0"
reqwest-eventsource = "0.6.0"
futures-util = "0.3.30"

[lints]
workspace = true

[[bin]]
name = "near-pyth"
path = "src/main.rs"
